Address some of the review comments

--- a/03d_dashboard2.ipynb
+++ b/03d_dashboard2.ipynb
@@ -64,7 +64,9 @@
    "id": "bc1ff4db-7a93-4d66-8fc7-ca8d66395cf4",
    "metadata": {},
    "source": [
-    "Let's display the widget so we can see what changes as we work on the dashboard. It is helpful to make a new view for this output."
+    "Let's display the widget so we can see what changes as we work on the dashboard. It is helpful to make a new view for this output.\n",
+    "\n",
+    "*Note that initially there will be nothing displayed in the output cell. We fix that up below.*"
    ]
   },
   {
@@ -142,7 +144,7 @@
    "source": [
     "from nbdev.export import nb_export\n",
     "\n",
-    "nb_export('03d_deashboard2.ipynb', 'dashboard_pydantic')"
+    "nb_export('03d_dashboard2.ipynb', 'dashboard_pydantic')"
    ]
   },
   {
