--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -82,12 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %answer key/03b/01.py\n",
-    "\n",
-    "from pydantic import BaseModel\n",
-    "\n",
-    "class SimpleModel(BaseModel):\n",
-    "    window_size : int\n"
+    "# %answer key/03b/01.py\n"
    ]
   },
   {
@@ -245,9 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %answer key/03b/03.py\n",
-    "\n",
-    "ui.value = {\"window_size\": 5}\n"
+    "# %answer key/03b/03.py\n"
    ]
   },
   {
@@ -522,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %answer key/03b/05.py"
+    "# %answer key/03b/05.py\n"
    ]
   },
   {
