Another @mwcraig wording suggestion accepted.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -989,9 +989,9 @@
    "id": "677f5e26-fe20-4be6-9f66-80954604049c",
    "metadata": {},
    "source": [
-    "Sweet! If you still have an Datagrid View of the `selected_df` dataframe open, and you increase the value of `window_size` you will see that there is now a \"Smoothed Data\"\" column. \n",
+    "Sweet! If you increase the value of `window_size` you will see that there is now a \"Smoothed Data\"\" column.\n",
     "\n",
-    "**EXERCISE**: Now create a Slider widget that is linked to the `poly_order`. "
+    "**EXERCISE**: Now create a Slider widget that is linked to the `poly_order`."
    ]
   },
   {
