Accept Matt's suggestions for Voici description
Co-authored-by: Matt Craig <mattwcraig@gmail.com>

--- a/04b_deployment_clientside.ipynb
+++ b/04b_deployment_clientside.ipynb
@@ -80,7 +80,7 @@
    "id": "d39a0660",
    "metadata": {},
    "source": [
-    "At this point you can test and see if the web application works by running a local web server pointed at the `_output` directory and then openning a new browser tab pointed at the local server [(http://localhost:8000/)](http://localhost:8000/).  If it works, you can deploy the `_output` directory to a web server. If you execute the following cell, you will need to \"Interrupt\" the kernel to continue with the rest of the notebook."
+    "At this point you can test and see if the web application works by running a local web server pointed at the `_output` directory and then opening a new browser tab pointed at the local server [(**http://localhost:8000/**)](http://localhost:8000/).  If it works, you can deploy the `_output` directory to a web server. If you execute the following cell, you will need to \"Interrupt\" the kernel to continue with the rest of the notebook."
    ]
   },
   {
