Fixed typo in comments.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -258,7 +258,7 @@
     "#| export\n",
     "# %answer key/dashboard/widgets.py 20\n",
     "\n",
-    "# set the 'max' attribute of the slider to the minimum year of the our data\n",
+    "# set the 'max' attribute of the slider to the maximum year of the our data\n",
     "# and let's do the same for 'min'"
    ]
   },
