Update plot labels

--- a/03c_other_dashboard_elements.ipynb
+++ b/03c_other_dashboard_elements.ipynb
@@ -212,9 +212,11 @@
     "        self.plot_output.clear_output(wait=True) \n",
     "        with self.plot_output: \n",
     "            plt.xlabel('Year') \n",
-    "            plt.ylabel('Temperature') \n",
-    "            plt.plot(self.selected['Year'], self.selected['Temperature']) \n",
-    "            plt.plot(self.selected['Year'], self.selected['Savitzky-Golay']) \n",
+    "            plt.ylabel('Temperature Anomalies over Land w.r.t. 1951-80 (˚C)') \n",
+    "            plt.title('Global Annual Mean Surface Air Temperature Change')\n",
+    "            plt.plot(self.selected['Year'], self.selected['Temperature'], label='Raw Data') \n",
+    "            plt.plot(self.selected['Year'], self.selected['Savitzky-Golay'], label='Smoothed Data') \n",
+    "            plt.legend()\n",
     "            plt.show() \n",
     "\n",
     "    def display_data(self):\n",
@@ -339,7 +341,7 @@
    "source": [
     "from nbdev.export import nb_export\n",
     "\n",
-    "nb_export('03c_other_dashboard_widgets.ipynb', 'dashboard_pydantic')"
+    "nb_export('03c_other_dashboard_elements.ipynb', 'dashboard_pydantic')"
    ]
   },
   {
