Added my notes on using Voilà on a publicly accessible server.

--- a/04a_deployment_serverside.ipynb
+++ b/04a_deployment_serverside.ipynb
@@ -5,17 +5,16 @@
    "id": "06a0236b-3c68-4156-a4ab-d44f241284c5",
    "metadata": {},
    "source": [
-    "# Deploying Your Dashboard: Service-Side Processing Options\n",
-    "\n",
+    "# Deploying Your Dashboard: Server-Side Processing Options\n",
     "\n",
     "## TO DO IN THIS NOTEBOOK\n",
     "- [ ] Note the problem of Jupyter being server-client architecture and how it affects deployment as web app.\n",
-    "- [ ] Revise Binder section  and mention issues with its speed (or lack thereof) and code visibility.\n",
-    "- [ ] Mention deployment on Nebari (?)\n",
-    "- [ ] Introduce Voila as a solution to the problem.\n",
-    "  - [ ] Mention SECURITY issue that requires v0.5.6 or later to avoid.\n",
-    "  - [ ] Mention setting up cronjob to restart Voila (and kill old processes) to avoid memory leak.\n",
-    "  - [ ] Mention need for robust server to handle multiple users."
+    "- [ ] Mention deployment on Nebari (?) [DROPPED, NOT APPROPRIATE]\n",
+    "- [ ] Revise section on Voilà as a deployment solution.\n",
+    "  - [x] Mention SECURITY issue that requires v0.5.6 or later to avoid.\n",
+    "  - [x] Mention setting up cronjob to restart Voilà (and kill old processes) to avoid memory leak.\n",
+    "  - [x] Mention need for robust server to handle multiple users.\n",
+    "- [x] Revise Binder section  and mention issues with its speed (or lack thereof) and code visibility.\n"
    ]
   },
   {
@@ -33,11 +32,11 @@
    "source": [
     "## Voilà\n",
     "\n",
-    "[Voilà](https://github.com/voila-dashboards/voila) turns Jupyter notebooks into standalone web applications. But how? Basically, it renders your notebook without actually showing the code cells. It only shows markdown cells and the widget outputs. This also makes sure your user can't run arbitrary code.\n",
+    "[Voilà](https://github.com/Voilà-dashboards/Voilà) turns Jupyter notebooks into standalone web applications. But how? Basically, it renders your notebook without actually showing the code cells. It only shows markdown cells and the widget outputs. This also makes sure your user can't run arbitrary code.\n",
     "\n",
     "### Preview\n",
     "\n",
-    "First, let's make sure we have dashboard_01.ipynb open to the side. Now, lets use the Voila preview button to see a preview of what our app will look like fully deployed.\n",
+    "First, let's make sure we have dashboard_01.ipynb open to the side. Now, lets use the Voilà preview button to see a preview of what our app will look like fully deployed.\n",
     "\n",
     "Notice the \"refresh\" button and the \"render on save\" option. Oftentimes, we want to see the preview as we are developing."
    ]
@@ -47,7 +46,7 @@
    "id": "94db277d-369d-4967-af0e-37d83b77fb21",
    "metadata": {},
    "source": [
-    "### Launching Voila server from the command line"
+    "### Launching Voilà server from the command line"
    ]
   },
   {
@@ -55,7 +54,7 @@
    "id": "90014d83-fa48-4604-b76c-80b6529590d8",
    "metadata": {},
    "source": [
-    "It will take a minute or so to run the cell below. Thats because a server is being rendered that Voila will run in. It should open in a new tab for us."
+    "It will take a minute or so to run the cell below. That's because a server is being rendered that Voilà will run in. It should open in a new tab for us."
    ]
   },
   {
@@ -67,7 +66,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "voila 02d_dashboard_test.ipynb"
+    "Voilà 02d_dashboard_test.ipynb"
    ]
   },
   {
@@ -75,11 +74,29 @@
    "id": "75185e06",
    "metadata": {},
    "source": [
-    "## Running Voila on a publicly accessible server\n",
+    "## Running Voilà on a publicly accessible server\n",
     "\n",
-    "This can be done and the instructions are available in the Voila documentation. If you have experience running linux servers, it isn't particularly hard to set up Voila to be running on a server and to respond to web queries.  That said, you do want to make sure you have a robust server to handle multiple users.  You also want to make sure you have a cronjob set up to restart Voila every so often to avoid memory leaks.\n",
+    " If you have experience running Linux servers, it isn't particularly hard to set up Voilà to be running 'headless' on a server and to respond to web queries. The folks from Voilà [provide deployment instructions in the documentation](https://voila.readthedocs.io/en/stable/deploy.html). \n",
     "\n",
-    "Finally, running a publicly accessible server brings up security issues you want to be certain the security set up correctly (or that you deploy it on a relatively isolated system). Voila itself had some security issues that were fixed in version 0.5.6. "
+    "### Considerations for running Voilà on a publicly accessible server\n",
+    "- **Serving a Single Document or an Entire Directory**: You can serve a single notebook or an entire directory of notebooks with Voilà.\n",
+    "  - Serving a single notebook is easier as you can set up a single Voilà process to serve the notebook.\n",
+    "  - If you serve a directory:\n",
+    "    - Voilà will create a landing page with links to each notebook. You can also create an index notebook that serves as a landing page for your dashboard.  We have successfully used a redirect from an apache/nginx web server landing page to the Voilà index notebook.\n",
+    "    - For your visitors to be able to access multiple notebooks, you MUST serve the entire directory with Voilà.  - Each notebook visited will be a separate Voilà instance, so you will need to consider the memory and CPU requirements of your server.\n",
+    "- **Memory**: Voilà processes can sometimes have memory leaks and can sometimes crash.  Its probably a good idea to have inactive sessions self terminate. Furthermore, one of us has used a cronjob to restart Voilà every minute after checking if it is still running.  The Voilà instructions do provide some guidance on how to set up a systemd service to run Voilà and keep it running.\n",
+    "- **Load**: If you have multiple simultaneous users, you will want to make sure you have a robust server to handle the load.\n",
+    "- **Security**: Voilà had some security issues that were fixed in version 0.5.6. Make sure you are running a version that is at least that new. As with any publicly-facing server, you will want to make sure you are keeping up with security patches.  The Voilà documentation seemingly assumes you are running Voilà as a standalone server, and runs it as root.  You *can* run Voilà as a non-root user, but you will need to be familiar with Linux permissions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "396add5d",
+   "metadata": {},
+   "source": [
+    "## Running Voilà in a Docker Container\n",
+    "\n",
+    "# Maybe Nicole can add some notes here?!?"
    ]
   },
   {
@@ -130,9 +147,9 @@
    "id": "7ecff24b-6ffd-41c4-9263-f076c8f3070a",
    "metadata": {},
    "source": [
-    "## Using Binder and Voila together\n",
+    "## Using Binder and Voilà together\n",
     "\n",
-    "Binder makes it really easy to launch a notebook from Voila instead of JupyterLab. The steps are the same as before, except we will use `Path to a notebook file` option to specify that we want to launch a particular notebook with Voila. We will format the path to a notebook as such: `voila/render/path/to/notebook.ipynb`. In this case, we want to launch our dashboard notebook `dashboard_01.ipynb`.\n",
+    "Binder makes it really easy to launch a notebook from Voilà instead of JupyterLab. The steps are the same as before, except we will use `Path to a notebook file` option to specify that we want to launch a particular notebook with Voilà. We will format the path to a notebook as such: `voila/render/path/to/notebook.ipynb`. In this case, we want to launch our dashboard notebook `dashboard_01.ipynb`.\n",
     "\n",
     "![image](img/binder_voila.png)"
    ]
@@ -142,6 +159,8 @@
    "id": "5f902b28-61dd-4dc5-b2b7-84e337658310",
    "metadata": {},
    "source": [
+    "# THE FOLLOWING NEEDS AN UPDATE!\n",
+    "\n",
     "Okay, let's try it. This time, let's go ahead and create a badge.\n",
     "\n",
     "1. Go to [mybinder.org](https://mybinder.org)\n",
