Address more review comments

--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -284,7 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oh my! Apparently you can set individual fields to values that are invalid. While there is a clear indication of what the error is, it might be nice to set up the interface so that the user cannot enter invalid values.\n",
+    "Oh my! Apparently you can set individual fields to values that are invalid. Since we didn't provide a default value, pydantic assumes it was 0, which violates our constraint.\n",
+    "\n",
+    "While there is a clear indication of what the error is, it might be nice to set up the interface so that the user cannot enter invalid values.\n",
     "\n",
     "Let's check to see what kind of widget ipyautoui made for us:"
    ]
