--- a/03c_other_dashboard_elements.ipynb
+++ b/03c_other_dashboard_elements.ipynb
@@ -49,6 +49,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10d5c983-c1d6-4ccf-ba85-05915b5766ca",
+   "metadata": {},
+   "source": [
+    "## Implement the text widgets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "04c338c0-7528-4f5f-a04f-b275f837df59",
    "metadata": {},
    "source": [
@@ -139,12 +147,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "281e350b-0e07-4e00-84b0-1268e1df3de1",
+   "metadata": {},
+   "source": [
+    "## Implement plotting and data display"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4574128-a7ba-4a62-a31c-7fc85b0eaa5d",
    "metadata": {},
    "source": [
     "Next, we make the widget with the plot. To do that this time around we will make a class with a method to filter the data and to make the plot.\n",
     "\n",
-    "First, some exports."
+    "First, some imports."
    ]
   },
   {
@@ -157,6 +173,7 @@
     "#| export\n",
     "from pathlib import Path\n",
     "\n",
+    "from ipydatagrid import DataGrid\n",
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "from scipy.signal import savgol_filter\n",
@@ -168,7 +185,18 @@
    "id": "cbdc602c-fd25-4f45-966d-375ad8999961",
    "metadata": {},
    "source": [
-    "Next, a small class that reads the data file and has a *traitlet* called `smoothing_info` that is a dictionary, which we assume has the same keys as our control widget."
+    "Next, a small class that reads the data file and has a *traitlet* called `smoothing_info` that is a dictionary. Recall that the `traitlets` package is what implements the observability of Jupyter widgets. We use a dictionary here because the intent, in the next notebook, is to link the `smoothing_info` trait of the object below to the `_value` trait of the `ipyautotui`-generated widget.\n",
+    "\n",
+    "In addition to declaring the traitlet we use `observe` in a new way, as a decorator for one of the methods of our class. This snippet of code means \"call the method `select_and_plot` any time the value of `smoothing_info` changes\":\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "    @tr.observe('smoothing_info')\n",
+    "    def select_and_plot(self, change):\n",
+    "        self.window_size = ...\n",
+    "```\n",
+    "\n",
+    "It is that method which does most of the work of generating a plot and updating the displayed data."
    ]
   },
   {
@@ -188,7 +216,7 @@
     "    def __init__(self):\n",
     "        self.original_data = pd.read_csv(Path(DATA_DIR) / DATA_FILE, escapechar='#')\n",
     "        self.plot_output = widgets.Output()\n",
-    "        self.data_output = widgets.Output()\n",
+    "        self.data_output = DataGrid(self.original_data, header_visibility=\"column\", auto_fit_columns=True)\n",
     "\n",
     "    @tr.observe('smoothing_info')\n",
     "    def select_and_plot(self, change):\n",
@@ -209,6 +237,8 @@
     "        self.display_data()\n",
     "\n",
     "    def display_plot(self): \n",
+    "        # This plotting function is copied from the first \n",
+    "        # version of the dashboard.\n",
     "        self.plot_output.clear_output(wait=True) \n",
     "        with self.plot_output: \n",
     "            plt.xlabel('Year') \n",
@@ -220,9 +250,7 @@
     "            plt.show() \n",
     "\n",
     "    def display_data(self):\n",
-    "        self.data_output.clear_output(wait=True)\n",
-    "        with self.data_output: \n",
-    "            display(self.selected)"
+    "        self.data_output.data = self.selected"
    ]
   },
   {
@@ -260,6 +288,14 @@
    "outputs": [],
    "source": [
     "dap.smoothing_info = dict(year_range=(1950, 2000), window_size=5, polynomial_order=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10b69cc9-458f-4b71-8820-cb44f301d60f",
+   "metadata": {},
+   "source": [
+    "## Mutable traits are a little tricky"
    ]
   },
   {
@@ -329,7 +365,7 @@
    "id": "47fff6fe-b649-43c9-a869-4978d62145e7",
    "metadata": {},
    "source": [
-    "Now that we are sure tings are working well, we export this code with nbdev."
+    "Now that we are sure things are working well, we export this code with nbdev."
    ]
   },
   {
