--- a/03e_more_ipyautoui_pydantic.ipynb
+++ b/03e_more_ipyautoui_pydantic.ipynb
@@ -1,31 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94b54234-0544-430c-a800-6d4e3ec29587",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dashboard_pydantic.main import main_widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d37146b-de0b-48d0-a8e9-370f30c17bc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "main_widget"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "46efd483-a73e-43e2-ba2e-879b790fcddf",
    "metadata": {},
    "source": [
-    "## Further exploration of ipyautoui\n",
+    "# Further exploration of ipyautoui\n",
     "\n",
     "The easiest way to get a better idea of what ipyautoui can do is to try out its demo. If you have time, feel free to explore!"
    ]
@@ -97,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SmoothingSetttings(BaseModel, validate_assignment=True):\n",
+    "class SmoothingSettings(BaseModel, validate_assignment=True):\n",
     "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
     "    polynomial_order: Annotated[int, Field(ge=1, le=10)] = 1\n",
     "\n",
@@ -139,7 +119,7 @@
    "id": "cf984643-99d6-42bc-944f-a34fee7aab02",
    "metadata": {},
    "source": [
-    "Now we make a class to hold the controls which has two fields: `year_range` and `smoothing`. For `smoothing`, we use the union operator `|` in the type annotation to indicate that the `smoothing` can be either of type `SmoothingSetttings` or can be `None`."
+    "Now we make a class to hold the controls which has two fields: `year_range` and `smoothing`. For `smoothing`, we use the union operator `|` in the type annotation to indicate that the `smoothing` can be either of type `SmoothingSettings` or can be `None`."
    ]
   },
   {
