Finish up pydantic dashboard

--- a/03d_dashboard2.ipynb
+++ b/03d_dashboard2.ipynb
@@ -9,6 +9,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c2f1200-8c7e-4fc5-b27a-f0a0c238c31d",
+   "metadata": {},
+   "source": [
+    "We begin by loading the answer magic from the first dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3205e31b-1503-46d6-b14d-fa38dcc753aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dashboard"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "85267750-4890-4ef0-a33d-cc6998d3cbc3",
@@ -16,6 +34,14 @@
    "outputs": [],
    "source": [
     "#| default_exp main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2280bdee-647f-4740-9f54-96e6aa90f440",
+   "metadata": {},
+   "source": [
+    "Next we import the widgets that will make up the dashboard."
    ]
   },
   {
@@ -99,8 +125,9 @@
     "data_and_plot = DataAndPlot()\n",
     "text_boxes = TextBoxes()\n",
     "\n",
+    "data_accordion = widgets.Accordion(children=(data_and_plot.data_output,), titles=(\"Selected Data\",))\n",
     "desc_and_ctrl_box.children = (text_boxes, controls)\n",
-    "data_box.children = (data_and_plot.data_output, data_and_plot.plot_output)"
+    "data_box.children = (data_accordion, data_and_plot.plot_output)"
    ]
   },
   {
@@ -110,7 +137,7 @@
    "source": [
     "No plot is displayed yet because we haven't set any of the display parameters. We make that connection below using a way to connect widgets that we have not discussed yet: widgets traitlets can be linked to each other so that any change in the value of one changes the other.\n",
     "\n",
-    "`link` takes two required arguments and one optional argument. The required arguments are each a tuple of a widget and the attribute of that widget to be linked. The optional argument,w hich we won't use here, is a callable that transforms the attribute on the source to the attribute on the target."
+    "`link` takes two required arguments and one optional argument. The required arguments are each a tuple of a widget and the attribute of that widget to be linked. The optional argument, which we won't use here, is a callable that transforms the attribute on the source to the attribute on the target."
    ]
   },
   {
@@ -125,6 +152,59 @@
     "source = (controls, \"_value\")\n",
     "target = (data_and_plot, \"smoothing_info\")\n",
     "link = widgets.link(source, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9660e325-1bd7-489c-b808-15500094f2e9",
+   "metadata": {},
+   "source": [
+    "Finally, we make some of styling changes that we made to the first version of the dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3295c402-1071-479b-94b4-ca4ba3827ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Height and width of the data display\n",
+    "data_and_plot.data_output.layout.height = \"200px\"\n",
+    "data_and_plot.data_output.layout.width = \"350px\"\n",
+    "\n",
+    "# Open the data accordion\n",
+    "data_accordion.selected_index = 0\n",
+    "\n",
+    "# Do the text layout\n",
+    "text_boxes.layout.max_width = \"500px\"\n",
+    "\n",
+    "# Set the maximum size for the controls\n",
+    "controls.layout.max_width = \"500px\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b608ae3-985c-49f1-a0ce-bbd631b606bf",
+   "metadata": {},
+   "source": [
+    "The autoui-generated sliders are large enough that they are causing the title/description to wrap. We will make them a little smaller below by looping over the individual input widgets and setting their width.\n",
+    "\n",
+    "**EXERCISE:** Fill in the missing loop variable below. You may need to look back at notebook [03b_ipyautoui](03b_ipyautoui.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb91516-a373-40ec-8dc5-556dac04580f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "# %answer key/3d/01.py\n",
+    "\n",
+    "for widget in ...:\n",
+    "    widget.layout.max_width = \"250px\""
    ]
   },
   {
