--- a/03e_more_ipyautoui_pydantic.ipynb
+++ b/03e_more_ipyautoui_pydantic.ipynb
@@ -5,7 +5,7 @@
    "id": "46efd483-a73e-43e2-ba2e-879b790fcddf",
    "metadata": {},
    "source": [
-    "# Further exploration of ipyautoui\n",
+    "# Further exploration of ipyautoui -- should this be fleshed out or dropped???\n",
     "\n",
     "The easiest way to get a better idea of what ipyautoui can do is to try out its demo. If you have time, feel free to explore!"
    ]
