Apply suggestions from code review
Co-authored-by: Nicole Brewer <nbrewer6@asu.edu>

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -981,6 +981,8 @@
    "source": [
     "### Imposing constraints on field values\n",
     "\n",
+    "**Typing** refers to Python's type hinting system that allows you to specify the expected types of variables, function parameters, and return values. Also known as *type hinting*, this feature of Python helps reduce errors and enhance code readability. Later in the tutorial, we will learn more about a particular kind of type hinting called *type aliasing*, which will help us make more complex types easier to reuse and manage.\n",
+    "\n",
     "*Attributes in a pydantic model are typically called fields, terminology we will use for the remainder of the notebook.*\n",
     "\n",
     "We have made some progress but we still have not imposed the constraints we want on window size and polynomial order. There are a couple new things we need to do that:\n",
@@ -1442,9 +1444,9 @@
    "source": [
     "We want to express to pydantic that each `int` has a restricted range. We'll do that by defining our own type below and then using that custom type in our Pydantic model.\n",
     "\n",
-    "We use feature of type hinting introduced in Python 3.12 called type aliasing to do this. \n",
+    "We use a feature of type hinting introduced in Python 3.12 called type aliasing to do this. \n",
     "\n",
-    "Since this tutorial was written to work in Python 3.11, we need to use the `tpying-extensions` package, which is a package that back ports new typing features in Python to versions before the feature was added.\n",
+    "Since this tutorial was written to work in Python 3.11, we need to use the `typing-extensions` package, which is a package that back ports new typing features in Python to versions before the feature was added.\n",
     "\n",
     "The cell below imports`TypeAliasType` from `typing-extensions`to let pydantic and type checkers know that we are defining a new type."
    ]
@@ -1488,7 +1490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** The feature looks very different in Python 3.12 than it does in earlier versions of Python. The equivalent to the definition of `ConstrainedInt` below in Python 3.12 looks like this:\n",
+    "**Note:** Our kernel is running Python 3.11. The above feature looks very different in Python 3.12 than it does in this and earlier versions of Python. The equivalent to the definition of `ConstrainedInt` in Python 3.12 looks like this:\n",
     "\n",
     "```python\n",
     "# Only works in Python 3.12 and up!\n",
