--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -83,6 +83,10 @@
    "outputs": [],
    "source": [
     "# %answer key/03b/01.py\n"
+    "\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "# create model called SimpleModel\n"
    ]
   },
   {
@@ -254,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's add add constraints to window size, one constraint at a time, to see how they affect the widget that is generated."
+    "Next, let's add constraints to window size, one constraint at a time, to see how they affect the widget that is generated."
    ]
   },
   {
@@ -401,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's import the pydantic model we finished up the last notebook with."
+    "Let's import the pydantic model we finished up the last notebook with. If you get an error here, make sure you ran every cell from the last notebook."
    ]
   },
   {
@@ -437,15 +441,6 @@
    "metadata": {},
    "source": [
     "*We recommend that you make a new view for this output so that you can see the effect of changes we make later.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "controls"
    ]
   },
   {
