--- a/03d_dashboard2.ipynb
+++ b/03d_dashboard2.ipynb
@@ -201,10 +201,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# %answer key/3d/01.py\n",
+    "# %answer key/03d/01.py\n",
     "\n",
-    "for widget in ...:\n",
-    "    widget.layout.max_width = \"250px\""
+    "# for widget in ...:\n",
+    "#    widget.layout.max_width = \"250px\""
    ]
   },
   {
